--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=4000
-MONGO_URI="mongodb+-srv://Ken_apps:Ken_apps@cluster0.npcrm.mongodb.net/music-album?retryWrites=true&w=majority"
+MONGO_URI=mongodb+-srv://Ken_apps:Ken_apps@cluster0.npcrm.mongodb.net/music-album?retryWrites=true&w=majority
+ACCESS_KeyId=AKIAY36ORECH6SSJZ6QL
+SECRET_ACCESS_KEY=sRPSaXYsx0b0X8ugi+-OXk712v6GrPQ0ereaqvpzz
+BUCKET_NAME=ken-apps
